[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/UI/DialogBubbleArrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DialogManager.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/interact_talk_sprite.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/DialogBubble.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/interact.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/Cantika Cute Handwriting.otf"

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Font/Cantika Cute Handwriting.otf"

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 3
use_mipmaps = true
font_data = SubResource( 3 )

[node name="DialogManager" type="Node2D"]
z_index = 11
script = ExtResource( 2 )

[node name="Dialog" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="SpeechBubble" type="Node2D" parent="Dialog"]

[node name="Label" type="Label" parent="Dialog/SpeechBubble"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I am a baboon."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Dialog/SpeechBubble/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource( 4 )
patch_margin_left = 60
patch_margin_top = 20
patch_margin_right = 60
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleArrow" type="Sprite" parent="Dialog/SpeechBubble"]
position = Vector2( -6.01326, -22.9098 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Dialog"]

[node name="InteractIcon" type="Sprite" parent="."]
z_index = 70
texture = ExtResource( 3 )
flip_h = true

[node name="Finger" type="Sprite" parent="."]
z_index = 70
texture = ExtResource( 5 )
flip_v = true

[node name="FulfillNode" type="Node2D" parent="."]
z_index = 100

[node name="Fulfill_Label" type="Label" parent="FulfillNode"]
margin_right = 40.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "fullfill order"
__meta__ = {
"_edit_use_anchors_": false
}
